fix chat lists design on firefox

--- a/front/src/app/chat/chat-list-component/chat-list.component.scss
+++ b/front/src/app/chat/chat-list-component/chat-list.component.scss
@@ -8,3 +8,6 @@ ul {
 }
 ul{overflow-y:auto;}
 
+ul {
+  list-style-type: none;
+}
